@@ -318,10 +318,7 @@
 						<a href="http://enhancedsteam.com/featuredetail.php?id=14" class="help"></a>
 					</li>
 					<li>
-						<input type="checkbox" id="fadevotedgreenlightitems"><label for="fadevotedgreenlightitems" id="greenlight_fade_voted_text">Fade voted Greenlight items</label>
-					</li>
-					<li>
-						<input type="checkbox" id="previewgreenlightvotes"><label for="previewgreenlightvotes" id="greenlight_vote_preview_text">Preview Greenlight votes</label>
+						<input type="checkbox" id="dynamicgreenlight"><label for="dynamicgreenlight" id="dynamicgreenlight_text">Use dynamic data while browsing Greenlight</label>
 					</li>
 					<li>
 						<input type="checkbox" id="hideactivelistings"><label for="hideactivelistings" id="hideactivelistings_text">Hide all active listings on Market homepage by default</label>
@@ -345,12 +342,6 @@
 					<li>
 						<input type="checkbox" id="profile_permalink"><label for="profile_permalink" id="profile_permalink_text">Show permalink on profiles</label>
 					</li>
-				<!-- commenting out for future development
-				<li>
-						<input type="checkbox" id="profile_api_info"><label for="profile_api_info" id="profile_api_info_text">Show user API link on profiles</label>
-						<p id="api_key_block"><span id="api_key_text">API Key</span>: <input type="text" class="textbox" size="38" maxlength="32" id="api_key"><a href="http://steamcommunity.com/dev/apikey" target="_blank" class="help"></a></p>
-					</li>
-				-->
 				<div id="profile_link_text">Show profile links to:</div><a href="http://enhancedsteam.com/featuredetail.php?id=21" class="help"></a>
 				<ul id="profile_links">
 					<li>
